# TUF-AvatarTalk

./: .gitignore  README.md
tuf_agent-backend/: .env  pyproject.toml
tuf_agent-backend/src/app/: main.py
tuf_agent-backend/src/app/agents/: tuf_agent.py
tuf_agent-backend/src/app/api/: routes.py
tuf_agent-backend/src/app/config/: settings.py
tuf_agent-backend/src/app/model/: inspect_chunk.py  test.py
tuf_agent-backend/src/app/services/: agent_service.py  stt_service.py  tts_service.py
tuf_agent_frontend/: README.md  index.html  package-lock.json  vite.config.js.timestamp-1763282370944.mjs
tuf_agent_frontend/src/: index.css
tuf_agent_frontend/src/components/: Avatar.jsx  UI.jsx
tuf_agent_frontend/src/hooks/: useChat.jsx
